# CG

./: .gitignore  README.md
task0/: CMakeLists.txt  Makefile  README.md  fs1.glsl  fs2.glsl  main.cpp  shader.cpp  shader.hpp  state.h  task0  triangle.cpp  triangle.h  vs1.glsl  vs2.glsl  vs3.glsl
task1/: CMakeLists.txt  Makefile  fs1.glsl  fs2.glsl  main.cpp  objloader.hpp  task1  triangleCow.cpp  triangleCow.h  vs1.glsl
task2/: CMakeLists.txt  Makefile  controls.cpp  controls.hpp  fs1.glsl  fs2.glsl  main.cpp  objloader.cpp  shader.cpp  state.h  tangentspace.cpp  task1  task2  task2.cpp  task2.h  triangleCow.cpp.autosave  triangleCow.h  vs1.glsl  vs2.glsl
